--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="row">
       <div class="col-lg-4">
 <img src="images/twobikes.jpg" alt="two people on bikes" class="bd-placeholder-img rounded-circle" width="140" height="140">
-        <h2 class="fw-normal">Heading</h2>
+        <h2 class="fw-normal">Heading1</h2>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
