--- a/index.html
+++ b/index.html
@@ -242,20 +242,20 @@
     <div class="row">
       <div class="col-lg-4">
 <img src="images/twobikes.jpg" alt="two people on bikes" class="bd-placeholder-img rounded-circle" width="140" height="140">
-        <h2 class="fw-normal">Heading1</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <h2 class="fw-normal">Bike Together</h2>
+        <p>Travelling together is always fun with BikeItBristol</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+        <img src="images/manbike.jpg" alt="man on bike" class="bd-placeholder-img rounded-circle" width="140" height="140">
+        <h2 class="fw-normal">Getting to Work Late?</h2>
+        <p>Dont worry as BikeItBristol will always have bikes around the corner</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
+        <img src="images/kidbike.jpg" alt="man on bike" class="bd-placeholder-img rounded-circle" width="140" height="140">
+        <h2 class="fw-normal">Welcoming All Age Groups</h2>
+        <p>BikeItBristol is welcome to all age groups with all different bike sizes</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
