--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       .b-example-divider {
         width: 100%;
         height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
+        background-color: rgba(42, 192, 80, 0.1);
+        border: solid rgba(42, 192, 80, 0.1);
         border-width: 1px 0;
         box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
       }
@@ -156,7 +156,7 @@
 <header data-bs-theme="dark">
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Carousel</a>
+      <a class="navbar-brand" href="#">BikeItBristol</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -194,8 +194,8 @@
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
+            <h1>Making Public Travel Easier.</h1>
+            <p class="opacity-75">Sign up to BikeItBristol and make public travel easier today.</p>
             <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
           </div>
         </div>
@@ -204,8 +204,8 @@
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
+            <h1>Travel Faster, Travel Better.</h1>
+            <p>BikeItBristol makes public travel faster and better than before.</p>
             <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
           </div>
         </div>
@@ -214,8 +214,8 @@
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
+            <h1>Join the BikeItBristol Community.</h1>
+            <p>Join the community now and enjoy all of the benefits of BikeItBristol.</p>
             <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
           </div>
         </div>
@@ -241,19 +241,19 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-<img src="images/twobikes.jpg" alt="two people on bikes" class="bd-placeholder-img rounded-circle" width="140" height="140">
+<img src="images/twobikes.jpg" alt="two people on bikes" class="bd-placeholder-img rounded-circle" width="200" height="160">
         <h2 class="fw-normal">Bike Together</h2>
         <p>Travelling together is always fun with BikeItBristol</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/manbike.jpg" alt="man on bike" class="bd-placeholder-img rounded-circle" width="140" height="140">
+        <img src="images/manbike.jpg" alt="man on bike" class="bd-placeholder-img rounded-circle" width="200" height="160">
         <h2 class="fw-normal">Getting to Work Late?</h2>
         <p>Dont worry as BikeItBristol will always have bikes around the corner</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/kidbike.jpg" alt="man on bike" class="bd-placeholder-img rounded-circle" width="140" height="140">
+        <img src="images/kidbike.jpg" alt="man on bike" class="bd-placeholder-img rounded-circle" width="200" height="160">
         <h2 class="fw-normal">Welcoming All Age Groups</h2>
         <p>BikeItBristol is welcome to all age groups with all different bike sizes</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
@@ -267,11 +267,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading fw-normal lh-1">BikeItBristol is better than ever and<span class="text-body-secondary"> it’ll blow your mind.</span></h2>
+        <p class="lead">When you Join BikeItBristol you will be welcomed into an amazing community of good people and good travel. We aim to make sure everyone has the best experience when using our bikes and our facilities.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="images/bikecommunity.jpg" alt="community bike" class="bd-placeholder-img rounded-circle" width="650" height="500">
       </div>
     </div>
 
@@ -279,11 +279,11 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Find a Bike near you. <span class="text-body-secondary">See for yourself.</span></h2>
+        <p class="lead">When using BikeItBristol there is always a bike near you wherever you are. Wherever you are in Bristol there will always be a bike for you to use when using BikeItBristol. Our facilities always offer 24/7 support on our bikes and where to find them and how to use them.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="images/bikewoman.jpg" alt="woman on bike" class="bd-placeholder-img rounded-circle" width="650" height="500">
       </div>
     </div>
 
@@ -291,11 +291,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Any enquirys, we are happy to help. <span class="text-body-secondary"></span></h2>
+        <p class="lead">Here at BikeItBristol we are happy top help with any worries or questions the community has and love to help people find out how to use our services and fit in with our community.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="images/bikeonroad.jpg" alt="bike on road" class="bd-placeholder-img rounded-circle" width="650" height="500">
       </div>
     </div>
 
