--- a/index.html
+++ b/index.html
@@ -177,7 +177,12 @@
   <header data-bs-theme="dark">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">BikeItBristol</a>
+        <!-- <a class="navbar-brand" href="#">BikeItBristol</a> -->
+        <img
+        src="./images/logo1.svg"
+        alt="triangle with all three sides equal"
+        height="120"
+        width="140" />
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -355,7 +360,7 @@
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; 2025–2025 BikeItBristol, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
   </main>
   <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
