--- a/index.html
+++ b/index.html
@@ -315,9 +315,10 @@
         </div>
         <div class="col-md-5">
           <img src="images/bikecommunity.jpg" alt="community bike" class="bd-placeholder-img rounded-circle" width="650"
-            height="500">
+          height="500">
         </div>
       </div>
+
 
       <hr class="featurette-divider">
 
@@ -327,10 +328,10 @@
               yourself.</span></h2>
           <p class="lead">When using BikeItBristol there is always a bike near you wherever you are. Wherever you are in
             Bristol there will always be a bike for you to use when using BikeItBristol. Our facilities always offer
-            24/7 support on our bikes and where to find them and how to use them.</p>
+            24/7 support on our bikes and where to find them and how to use them. When returning your bike you will be able to see parking checkpoints in the apps map and all you have to do is cycle to the desired checkpoint and press 'stop ride' on your bike.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="images/bikewoman.jpg" alt="woman on bike" class="bd-placeholder-img rounded-circle" width="650"
+          <img src="images/bikewoman.jpg" alt="woman on bike" class="bd-placeholder-img rounded-circle" width="600"
             height="500">
         </div>
       </div>
@@ -342,7 +343,7 @@
           <h2 class="featurette-heading fw-normal lh-1">Any enquirys, we are happy to help. <span
               class="text-body-secondary"></span></h2>
           <p class="lead">Here at BikeItBristol we are happy top help with any worries or questions the community has
-            and love to help people find out how to use our services and fit in with our community.</p>
+            and love to help people find out how to use our services and fit in with our community. The scheeme works in that you locate the bike you want on our map made inside the app and when at the desired bike you will pay on the app using apple pay or your card and your ride will be timed and payed for on how long you choose to ride your bike.</p>
         </div>
         <div class="col-md-5">
           <img src="images/bikeonroad.jpg" alt="bike on road" class="bd-placeholder-img rounded-circle" width="650"
@@ -352,6 +353,19 @@
 
       <hr class="featurette-divider">
 
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <p class="lead">Here at BikeItBristol we are want the best users experience so we have got a map for our loactions.</p>
+          <h2 class="featurette-heading fw-normal lh-1">Here is our map of the main location for our bikes. We are based in Stoke Girfford and right next to UWE. As you can see on the map opur main location is right next to the centre for sport and has bikes avaliable 24/7.<span
+              class="text-body-secondary"></span></h2>
+                    </div>
+        <div class="col-md-5">
+          <img src="images/map.jpeg" alt="bike on road" class="bd-placeholder-img rounded-circle" width="650"
+            height="500">
+        </div>
+      </div>
       <!-- /END THE FEATURETTES -->
 
     </div><!-- /.container -->
@@ -361,7 +375,10 @@
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; 2025–2025 BikeItBristol, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-    </footer>
+    <p>Contact Us At: 07932546594 and BikeItBristol@gmail.com</p>
+    <p>Based In Bristol, Stoke Gifford, BS16 1ZU Coldharbour Lane</p>
+  <p>Website Created by Dylan Thompson</p>
+  </footer>
   </main>
   <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 
